--- a/templates/quiz_result_good.html
+++ b/templates/quiz_result_good.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>퀴즈 결과</title>
+    <title>약한 적록 색약 진단</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            padding-top: 100px;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
+        .image-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border: 5px solid #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 10px;
+            margin-bottom: 20px;
+        }
+
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>퀴즈 결과입니다.</h1>
-        <div class="mt-3">
-            <p>퀴즈 결과 안정권입니다!!</p>
-            <a href="/" class="btn btn-primary">홈으로 돌아가기</a>
+        <div class="d-flex justify-content-center">
+            <h1>진단 결과: 약한 적록 색약</h1>
+        </div>
+        <div class="d-flex justify-content-center">
+            <p>강하지 않지만 약간의 적록 색약이 있어보입니다. 근처 안과에서 진단을 해주시길 바랍니다.</p>
+        </div>
+
+        <div class="image-container">
+            <img src="{{ url_for('static', filename='2.png') }}" alt="My Image">
+        </div>
+        <div class="d-flex justify-content-center">
+            <a class="btn btn-primary" href="/">홈페이지로 이동하기</a>
         </div>
     </div>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
