--- a/templates/quiz_result_not_good.html
+++ b/templates/quiz_result_not_good.html
@@ -8,7 +8,10 @@
     <div class="container">
         <h1>퀴즈 결과입니다.</h1>
         <div class="mt-3">
-            <p>퀴즈 결과 주의가 필요합니다! 다시 퀴즈를 풀어주세요!</p>
+            <p>퀴즈 결과 : 주의가 필요합니다! </p>
+            <p>
+                다시 퀴즈를 풀어주세요!
+            </p>
             <a href="/" class="btn btn-primary">홈으로 돌아가기</a>
         </div>
     </div>
