--- a/templates/quiz_result_recommend.html
+++ b/templates/quiz_result_recommend.html
@@ -8,7 +8,10 @@
     <div class="container">
         <h1>퀴즈 결과입니다</h1>
         <div class="mt-3">
-            <p>퀴즈 결과 색 구분에 이상이 있어 보입니다. 근처 병원 추천드려요!</p>
+            <p>퀴즈 결과 : 색 구분에 이상이 있어 보입니다</p>
+            <p>
+                근처 병원 방문을 추천드립니다!
+            </p>
             <a href="/" class="btn btn-primary">홈으로 돌아가기</a>
         </div>
     </div>
